--- a/_posts/2023-10-03-hello.md
+++ b/_posts/2023-10-03-hello.md
@@ -5,7 +5,8 @@ author: John Doe
 tags: article
 ---
 
-![기사 표지](https://kwonnaehyeon.github.io/images/20231003/01.jpg)
+![기사 표지]({{site.baseurl}}/images/20231003/01.jpg)
+그림 01 - 캡션캡션
 
 > Curabitur ut malesuada erat. Nullam malesuada odio tortor. Etiam sed porta dolor. Fusce justo sem, cursus id dignissim sed, efficitur ut felis. Suspendisse iaculis elit eget nunc eleifend interdum. Sed nec auctor tellus, eget scelerisque augue. Proin viverra accumsan fermentum. Vestibulum aliquam odio eget ipsum blandit, vel pulvinar elit placerat. Curabitur tincidunt nunc turpis, vitae volutpat eros aliquet tincidunt. In arcu eros, interdum et leo eget, dapibus feugiat lectus. Morbi vestibulum iaculis erat, quis dapibus nulla.
 
