--- a/_posts/2023-10-03-week5ass.md
+++ b/_posts/2023-10-03-week5ass.md
@@ -1,30 +1,54 @@
 ---
 layout: post
-title: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-author: John Doe
-tags: article
+title: 생성형 AI저작권에 대한 최신 동향
+author: 권내현
+tags: assignment
 ---
 
-![기사 표지]({{site.baseurl}}/images/20231003/01.jpg)
+### 요약
+
+> 생성형 AI는 사용자의 특정 요구에 따라 데이터나 콘텐츠 등의 결과물을 능동적으로 생성하는 인공지능 기술을 의미한다. 생성형 AI는 크롤링 등의 방법으로 학습 데이터를 수집, 분류 및 구축하는데, 이 때 다른 사람의 저작물을 무단으로 수집·학습할 경우, 해당 창작물의 저작권이 침해될 수 있다. 저작권 침해로부터 창작자를 보호하기 위해, 생성형 AI 학습 데이터셋과 관련한 저작권법이 마련되어야 할 것이다.
+
+## 서론
+
+  생성형 AI는 사용자의 특정 요구에 따라 텍스트, 오디오, 이미지 등의 기존 데이터를 이용한 학습 데이터를 기반으로 새로운 결과물을 생성하는 인공지능 기술을 의미한다.  기존의 딥러닝을 기반으로 한 AI 기술이 단순히 기존 데이터를 기반으로 미래의 데이터를 예측하거나 데이터를 분류하는 기술이라고 한다면, 생성형 AI는 이용자의 요구에 따라 스스로 데이터를 학습하여 능동적으로 데이터나 콘텐츠 등의 결과물을 창조하는 한 단계 더 진화한 AI 기술이라고 볼 수 있다. 생성형 AI의 예시로는 OpenAI의 ChatGPT, 마이크로소프트의 Copilot 등이 존재한다.
+
+  생성형 AI는 어떤 방식으로 학습 데이터를 수집할까? 대부분의 생성형 AI 는 웹 크롤링 등의 방법을  통해 학습 데이터를 수집하고 있다. 크롤링(Crowling)은 웹 사이트, 하이퍼링크, 데이터와 같은 정보 자원을 자동화된 방법으로 수집, 분류, 저장하는 것을 의미한다.   크롤링은 인터넷에 존재하는 데이터들을 가리지 않고 닥치는 대로 수집하는데, 이 과정에서 인터넷에 다른 사람의 저작물을 무단으로 수집, 학습한다면 해당 창작물의 저작권을 침해하게 되는 것이 아닐까?
+
+## 본론
+
+![기사 표지]({{site.baseurl}}/images/20231003/t1.jpg)
 그림 01 - 캡션캡션
 
-> Curabitur ut malesuada erat. Nullam malesuada odio tortor. Etiam sed porta dolor. Fusce justo sem, cursus id dignissim sed, efficitur ut felis. Suspendisse iaculis elit eget nunc eleifend interdum. Sed nec auctor tellus, eget scelerisque augue. Proin viverra accumsan fermentum. Vestibulum aliquam odio eget ipsum blandit, vel pulvinar elit placerat. Curabitur tincidunt nunc turpis, vitae volutpat eros aliquet tincidunt. In arcu eros, interdum et leo eget, dapibus feugiat lectus. Morbi vestibulum iaculis erat, quis dapibus nulla.
+  위의 표를 보면, 6개의 대규모 생성형 AI중 4개가 웹 크롤링 방식을 채택한 것을 알 수 있다. 이 중, 어도비 스톡 이미지, 개방형 라이선스 콘텐츠, 저작권이 만료된 퍼블릭 도메인 콘텐츠에 대한 한정적인 학습을 진행함으로써 저작권 침해 이슈를 겪지 않는 ‘Adobe Firefly’를 제외한 나머지 생성형 AI들은 저작권 침해 문제로부터 자유로울 수 없다.
 
-##서론
+  인터넷처럼 오픈된 공간에서 수억 개 이상의 데이터를 크롤링할 경우, 그 과정에서 저작권이 존재하는 저작물도 같이 수집된다. 생성형 AI가 원작자의 허락 없이 무단으로 수집한 데이터를 학습하여 새로운 결과물을 생성할 경우, 이는 저작권 침해로 이어질 수 있다.  실제로 2023년1월, 사라 앤더슨(Sarah Andersen) 외 2인의 아티스트는 Midjourney, Stability AI, DeviantArt를 상대로 집단소송을 제기했다.    Stability AI 등이 학습에 이용한 데이터셋에는 해당 아티스트들의 저작물이 포함되어 있었는데, 그들의 동의없이 무단으로 저작물을 학습시켰기 때문이다.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin venenatis ligula magna, in luctus leo finibus sit amet. In in risus nunc. Proin tincidunt enim ac lectus volutpat molestie sed ut tellus. Proin eget lacinia felis. In dui est, dapibus vitae venenatis vitae, convallis vel orci. Curabitur at pharetra turpis, at tempor tortor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec pharetra placerat suscipit. Donec arcu nisi, fermentum eget fringilla eu, ullamcorper vitae tortor. Suspendisse feugiat tellus at nulla mattis rutrum. In quis risus justo.
-##본론
+  “AI 모델이 라이선스 없이 저작권 있는 이미지를 사용하는 것을 차단해  기타 개발자가 라이선스 비용을 지불하거나 AI 훈련 모델에서 저작권이 있는 이미지를 제거하도록 강제할 수 있다. 이렇게 하면 생성형 AI의 학습 모델에서 상당한 수의 훈련 이미지가 제거돼 결과물의 품질이 저하될 수 있지만, 창작자들의 저작권은 보호될 것이다.” 
+  생성형 AI의 학습 데이터 무단 수집으로 인한 피해가 심각해짐에 따라, 일각에서는 이런 의견도 나오고 있는 실정이다. 다소 급진적인 의견이지만, 생성형 AI 학습에 의한 저작물의 무단 사용도 점점 늘어나고 있으니 이를 법으로 제제할 필요성이 증가한 것은 사실이다. 
 
-Sed id vehicula felis. Nam scelerisque et dui eu semper. Mauris gravida at lorem ac consectetur. Sed vitae posuere sem, in hendrerit enim. Ut eu fermentum augue. Nulla ornare tempor elit, a viverra magna ornare a. Praesent id turpis vitae elit euismod laoreet lacinia a erat. Curabitur egestas pellentesque odio, at maximus quam volutpat sed.
+## 결론
+  생성형AI의 결과물이 인간의 창작물과 비교할 수 없을 속도로 발전하고 있으며, 그 속도에는 점점 가속도가 붙고 있다. 따라서, 생성형 AI에 대한 규제 체제가 마련되어야 할 것으로 보인다. 생성형 AI의 저작권 침해 피해를 줄이기 위해서는 어떻게 해야 할까? 
 
-###작은 본론 1
-Proin interdum metus mi, quis ultricies ex imperdiet nec. Curabitur lacinia condimentum pellentesque. Maecenas tincidunt risus eget metus ornare hendrerit. In pretium neque sapien, et dignissim augue elementum sed. Aenean luctus blandit urna, quis vulputate ligula pharetra vel. Donec convallis massa ac turpis dictum, eu maximus libero gravida. 
+![기사 표지]({{site.baseurl}}/images/20231003/t2.jpg)
+그림 02 - 캡션캡션
 
-###작은 본론 2
-Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean in dictum neque. Sed quis porttitor mi. Mauris mattis at leo id efficitur. Aenean molestie ex fringilla augue fringilla, nec porttitor sapien aliquet. Morbi eget ullamcorper purus. Donec molestie nibh et leo blandit dignissim. Vestibulum fringilla tortor at libero gravida pulvinar.
+  위의 표를 보면, 생성형 AI의 결과물에 대한 저작권에 대한 논의에 비해 생성형 AI의 학습 데이터의 저작권 침해 사례에 대한 논의는 제대로 이루어지지 않은 것을 
+확인할 수 있다. 학습 데이터셋과 생성형 AI의 결과물, 그리고 제작사의 수입은 직접적인 연관관계를 가지고 있기 때문으로 추측된다. AI의 저작물 학습에 대한 저작권 면책 범위를 너무 넓게 인정해줄 경우에는 저작권자의 저작권이 침해되어 창작에 부정적인 영향을 줄 가능성이 있고, 그렇다고 인정 범위를 너무 좁혀버리면 생성형 AI 기술 발전에 제동이 걸릴 우려가 있다. 
+ 
+  그러나 생성형 AI는 인간의 창작물을 학습하여 인간의 창작물과 유사한 결과물을 내놓는 서비스이다. 생성형 AI의 저작물 무단 학습에 대한 면책 범위가 넓어질 수록 창작자들의 저작권이 침해되는 빈도가 늘어나고 창작자들의 창작 욕구는 감소할 것이다. 그렇게 되면 자연스레 생성형 AI가 학습할 데이터의 다양성도 줄어들어 결국 생성형 AI 생산물의 전체적인 퀄리티 감소로 이어질 수밖에 없다. 그러한 점을 감안해서라도 관련 법 제정을 통해 창작자들의 저작권 보호에 힘을 쓸 필요가 있다고 생각한다.
 
+### 참조 문헌
 
-
-# Hello, World!
-
-## This is my first post
+[1] Copyright Registration Guidance: Works Containing Material Generated by Artificial Intelligence https://www.copyright.gov/ai/ai_policy_guidance.pdf
+[2] 신용우 “생성형 AI 관련 저작권 쟁점과 대응 방안”
+[3] 양지훈 “ChatGPT를 넘어 생성형(Generative) AI 시대로 : 미디어·콘텐츠 생성형 AI 서비스 사례와 경쟁력 확보 방안”
+[4] mondaq “AI And IP: Who Or What Can Be An Author Or Inventor In Canada?”
+[5] 고학수, 임용, 박상철 “유럽연합 인공지능법안의 개요 및 대응방안”
+[6] 한국저작권위원회 “AI 모델이 만든 창작물의 저작권”
+[7] 남혁우 “美 저작권청, 사람의 창의성 입증된 AI작품 저작권 인정”
+[8] 10000Hacks “Where does Midjourney get its Art/Data? Is it Copyrighted?”
+[9] 정인선 “생성AI 학습용 데이터, 저작권 침해에서 자유롭기 어려워”
+[10] James Manyika “An overview of Bard: an early experiment with generative AI”
+[11] 이완근 “생성형AI 개발도구 Copilot의 오픈소스 라이선스 위반과 저작권 분쟁”
+[12] 이광욱, 이근우, 권은구 “그림 생성 초거대 AI 모델에 대한 법적 이슈”
