--- a/_posts/2023-10-03-week5ass.md
+++ b/_posts/2023-10-03-week5ass.md
@@ -17,27 +17,27 @@ tags: assignment
 
 ## 본론
 
-![기사 표지]({{site.baseurl}}/images/20231003/t1.png)
+![기사 표지]({{site.baseurl}}/images/20231003/404.jpg)
 그림 01 - 캡션캡션
 
-  - 위의 표를 보면, 6개의 대규모 생성형 AI중 4개가 웹 크롤링 방식을 채택한 것을 알 수 있다. 이 중, 어도비 스톡 이미지, 개방형 라이선스 콘텐츠, 저작권이 만료된 퍼블릭 도메인 콘텐츠에 대한 한정적인 학습을 진행함으로써 저작권 침해 이슈를 겪지 않는 ‘Adobe Firefly’를 제외한 나머지 생성형 AI들은 저작권 침해 문제로부터 자유로울 수 없다.
+  위의 표를 보면, 6개의 대규모 생성형 AI중 4개가 웹 크롤링 방식을 채택한 것을 알 수 있다. 이 중, 어도비 스톡 이미지, 개방형 라이선스 콘텐츠, 저작권이 만료된 퍼블릭 도메인 콘텐츠에 대한 한정적인 학습을 진행함으로써 저작권 침해 이슈를 겪지 않는 ‘Adobe Firefly’를 제외한 나머지 생성형 AI들은 저작권 침해 문제로부터 자유로울 수 없다.
 
-  - 인터넷처럼 오픈된 공간에서 수억 개 이상의 데이터를 크롤링할 경우, 그 과정에서 저작권이 존재하는 저작물도 같이 수집된다. 생성형 AI가 원작자의 허락 없이 무단으로 수집한 데이터를 학습하여 새로운 결과물을 생성할 경우, 이는 저작권 침해로 이어질 수 있다.  실제로 2023년1월, 사라 앤더슨(Sarah Andersen) 외 2인의 아티스트는 Midjourney, Stability AI, DeviantArt를 상대로 집단소송을 제기했다.    Stability AI 등이 학습에 이용한 데이터셋에는 해당 아티스트들의 저작물이 포함되어 있었는데, 그들의 동의없이 무단으로 저작물을 학습시켰기 때문이다.
+  인터넷처럼 오픈된 공간에서 수억 개 이상의 데이터를 크롤링할 경우, 그 과정에서 저작권이 존재하는 저작물도 같이 수집된다. 생성형 AI가 원작자의 허락 없이 무단으로 수집한 데이터를 학습하여 새로운 결과물을 생성할 경우, 이는 저작권 침해로 이어질 수 있다.  실제로 2023년1월, 사라 앤더슨(Sarah Andersen) 외 2인의 아티스트는 Midjourney, Stability AI, DeviantArt를 상대로 집단소송을 제기했다.    Stability AI 등이 학습에 이용한 데이터셋에는 해당 아티스트들의 저작물이 포함되어 있었는데, 그들의 동의없이 무단으로 저작물을 학습시켰기 때문이다.
 
   “AI 모델이 라이선스 없이 저작권 있는 이미지를 사용하는 것을 차단해  기타 개발자가 라이선스 비용을 지불하거나 AI 훈련 모델에서 저작권이 있는 이미지를 제거하도록 강제할 수 있다. 이렇게 하면 생성형 AI의 학습 모델에서 상당한 수의 훈련 이미지가 제거돼 결과물의 품질이 저하될 수 있지만, 창작자들의 저작권은 보호될 것이다.” 
-  - 생성형 AI의 학습 데이터 무단 수집으로 인한 피해가 심각해짐에 따라, 일각에서는 이런 의견도 나오고 있는 실정이다. 다소 급진적인 의견이지만, 생성형 AI 학습에 의한 저작물의 무단 사용도 점점 늘어나고 있으니 이를 법으로 제제할 필요성이 증가한 것은 사실이다. 
+  생성형 AI의 학습 데이터 무단 수집으로 인한 피해가 심각해짐에 따라, 일각에서는 이런 의견도 나오고 있는 실정이다. 다소 급진적인 의견이지만, 생성형 AI 학습에 의한 저작물의 무단 사용도 점점 늘어나고 있으니 이를 법으로 제제할 필요성이 증가한 것은 사실이다. 
 
 ## 결론
 
-  - 생성형AI의 결과물이 인간의 창작물과 비교할 수 없을 속도로 발전하고 있으며, 그 속도에는 점점 가속도가 붙고 있다. 따라서, 생성형 AI에 대한 규제 체제가 마련되어야 할 것으로 보인다. 생성형 AI의 저작권 침해 피해를 줄이기 위해서는 어떻게 해야 할까? 
+  생성형AI의 결과물이 인간의 창작물과 비교할 수 없을 속도로 발전하고 있으며, 그 속도에는 점점 가속도가 붙고 있다. 따라서, 생성형 AI에 대한 규제 체제가 마련되어야 할 것으로 보인다. 생성형 AI의 저작권 침해 피해를 줄이기 위해서는 어떻게 해야 할까? 
 
 ![기사 표지]({{site.baseurl}}/images/20231003/t2.png)
 그림 02 - 캡션캡션
 
-  - 위의 표를 보면, 생성형 AI의 결과물에 대한 저작권에 대한 논의에 비해 생성형 AI의 학습 데이터의 저작권 침해 사례에 대한 논의는 제대로 이루어지지 않은 것을 
+  위의 표를 보면, 생성형 AI의 결과물에 대한 저작권에 대한 논의에 비해 생성형 AI의 학습 데이터의 저작권 침해 사례에 대한 논의는 제대로 이루어지지 않은 것을 
 확인할 수 있다. 학습 데이터셋과 생성형 AI의 결과물, 그리고 제작사의 수입은 직접적인 연관관계를 가지고 있기 때문으로 추측된다. AI의 저작물 학습에 대한 저작권 면책 범위를 너무 넓게 인정해줄 경우에는 저작권자의 저작권이 침해되어 창작에 부정적인 영향을 줄 가능성이 있고, 그렇다고 인정 범위를 너무 좁혀버리면 생성형 AI 기술 발전에 제동이 걸릴 우려가 있다. 
  
-  - 그러나 생성형 AI는 인간의 창작물을 학습하여 인간의 창작물과 유사한 결과물을 내놓는 서비스이다. 생성형 AI의 저작물 무단 학습에 대한 면책 범위가 넓어질 수록 창작자들의 저작권이 침해되는 빈도가 늘어나고 창작자들의 창작 욕구는 감소할 것이다. 그렇게 되면 자연스레 생성형 AI가 학습할 데이터의 다양성도 줄어들어 결국 생성형 AI 생산물의 전체적인 퀄리티 감소로 이어질 수밖에 없다. 그러한 점을 감안해서라도 관련 법 제정을 통해 창작자들의 저작권 보호에 힘을 쓸 필요가 있다고 생각한다.
+  그러나 생성형 AI는 인간의 창작물을 학습하여 인간의 창작물과 유사한 결과물을 내놓는 서비스이다. 생성형 AI의 저작물 무단 학습에 대한 면책 범위가 넓어질 수록 창작자들의 저작권이 침해되는 빈도가 늘어나고 창작자들의 창작 욕구는 감소할 것이다. 그렇게 되면 자연스레 생성형 AI가 학습할 데이터의 다양성도 줄어들어 결국 생성형 AI 생산물의 전체적인 퀄리티 감소로 이어질 수밖에 없다. 그러한 점을 감안해서라도 관련 법 제정을 통해 창작자들의 저작권 보호에 힘을 쓸 필요가 있다고 생각한다.
 
 ### 참조 문헌
 
