--- a/_posts/2023-10-03-week5ass.md
+++ b/_posts/2023-10-03-week5ass.md
@@ -17,7 +17,7 @@ tags: assignment
 
 ## 본론
 
-![기사 표지]({{site.baseurl}}/images/20231003/t1.png)
+![기사 표지]({{site.baseurl}}/images/20231003/t1.png) <br>
 그림 01 - 캡션캡션
 
   위의 표를 보면, 6개의 대규모 생성형 AI중 4개가 웹 크롤링 방식을 채택한 것을 알 수 있다. 이 중, 어도비 스톡 이미지, 개방형 라이선스 콘텐츠, 저작권이 만료된 퍼블릭 도메인 콘텐츠에 대한 한정적인 학습을 진행함으로써 저작권 침해 이슈를 겪지 않는 ‘Adobe Firefly’를 제외한 나머지 생성형 AI들은 저작권 침해 문제로부터 자유로울 수 없다.
@@ -31,7 +31,7 @@ tags: assignment
 
   생성형AI의 결과물이 인간의 창작물과 비교할 수 없을 속도로 발전하고 있으며, 그 속도에는 점점 가속도가 붙고 있다. 따라서, 생성형 AI에 대한 규제 체제가 마련되어야 할 것으로 보인다. 생성형 AI의 저작권 침해 피해를 줄이기 위해서는 어떻게 해야 할까? 
 
-![기사 표지]({{site.baseurl}}/images/20231003/t2.png)
+![기사 표지]({{site.baseurl}}/images/20231003/t2.png) <br>
 그림 02 - 캡션캡션
 
   위의 표를 보면, 생성형 AI의 결과물에 대한 저작권에 대한 논의에 비해 생성형 AI의 학습 데이터의 저작권 침해 사례에 대한 논의는 제대로 이루어지지 않은 것을 
